Prepare for 1.95 release.

--- a/README
+++ b/README
@@ -26,4 +26,4 @@ More information on capabilities in the Linux kernel can be found at
 
 Cheers
 
-Andrew G. Morgan <morgan@linux.kernel.org>
+Andrew G. Morgan <morgan@kernel.org>
