--- a/doc/capget.2
+++ b/doc/capget.2
@@ -1,6 +1,5 @@
 .\"
-.\" $Id: capget.2,v 1.1.1.1 1999/04/17 22:16:31 morgan Exp $
-.\" written by Andrew Morgan <morgan@linux.kernel.org>
+.\" written by Andrew Morgan <morgan@kernel.org>
 .\"
 .TH CAPGET 2 "17th May 1998" "Linux 2.1" "Linux Programmer's Manual"
 .SH NAME
