Build with a pam_cap module.
Note, I've been confused about the capset/capget system calls.
It would seem that the current way(TM) is to get the raw API
from libc.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+* See GIT repository for recent history
+
+  git://master.kernel.org/pub/scm/libs/libcap/libcap.git
+
 libcap 1.10
 
 * fixed cap_free to abide by correct documention - use it to free
