--- a/doc/cap_from_text.3
+++ b/doc/cap_from_text.3
@@ -3,7 +3,7 @@
 .\"
 .TH CAP_FROM_TEXT 3 "21th Jan 2008" "" "Linux Programmer's Manual"
 .SH NAME
-cap_from_text, cap_to_text, cap_to_name, cap_from_name, _cap_names \- capability state textual representation translation
+cap_from_text, cap_to_text, cap_to_name, cap_from_name \- capability state textual representation translation
 .SH SYNOPSIS
 .B #include <sys/capability.h>
 .sp
@@ -14,8 +14,6 @@ cap_from_text, cap_to_text, cap_to_name, cap_from_name, _cap_names \- capability
 .BI "int cap_from_text(const char *" name ", cap_value_t *" cap_p );
 .sp
 .BI "char *cap_to_text(cap_value_t " cap );
-.sp
-.B extern char const *_cap_names[];
 .SH USAGE
 .br
 .B cc ... -lcap
@@ -85,10 +83,6 @@ converts a capability index value,
 .B cap ,
 to a libcap allocated textual string. This string should be deallocated with
 .B "cap_free" .
-.PP
-.B _cap_names
-is an array of textual names for capability numbers.  Unnamed capabilities
-have a NULL entry.  (This array is not defined by POSIX.1e.)
 .SH "TEXTUAL REPRESENTATION"
 A textual representation of capability sets consists of one or more
 whitespace-separated
@@ -171,10 +165,9 @@ or
 and
 .B cap_to_text
 are specified by the withdrawn POSIX.1e draft.
-.B cap_from_name ,
-.B cap_to_name
+.B cap_from_name
 and
-.B "_cap_names"
+.B cap_to_name
 are a Linux extension.
 .SH "SEE ALSO"
 .IR cap_clear (3),
