--- a/doc/cap_clear.3
+++ b/doc/cap_clear.3
@@ -1,13 +1,12 @@
-.\"
-.\" $Id: cap_clear.3,v 1.1.1.1 1999/04/17 22:16:31 morgan Exp $
-.\"
-.TH CAP_CLEAR 3 "26th May 1997" "" "Linux Programmer's Manual"
+.TH CAP_CLEAR 3 "29th March 2008" "" "Linux Programmer's Manual"
 .SH NAME
 cap_clear, cap_get_flag, cap_set_flag \- capability data object manipulation
 .SH SYNOPSIS
 .B #include <sys/capability.h>
 .sp
 .BI "int cap_clear(cap_t " cap_p );
+.sp
+.BI "int cap_clear_flag(cap_t " cap_p ", cap_flag_t " flag ");"
 .sp
 .BI "int cap_get_flag(cap_t " cap_p ", cap_value_t " cap ", cap_flag_t " flag ", cap_flag_value_t *" value_p ");"
 .sp
@@ -19,6 +18,12 @@ cap_clear, cap_get_flag, cap_set_flag \- capability data object manipulation
 initializes the capability state in working storage identified by
 .I cap_p
 in such a way that all capability flags are cleared.
+.PP
+.B cap_clear_flag
+resets, to
+.BR CAP_CLEAR ,
+all of the capabilities of the specific capability flag,
+.IR flag .
 .PP
 .B cap_get_flag
 obtains the current value of the capability flag,
@@ -64,6 +69,7 @@ can be
 (1).
 .SH "RETURN VALUE"
 .BR cap_clear ,
+.BR cap_clear_flag ,
 .B cap_get_flag
 and
 .B cap_set_flag
@@ -74,9 +80,10 @@ On failure,
 is set to 
 .BR EINVAL ,
 indicating that one of the arguments is invalid.
-
 .SH "CONFORMING TO"
-These functions are specified by POSIX.1e.
+These functions are as per the defunct POSIX.1e. spec.
+.B cap_clear_flag
+is an extension.
 .SH "SEE ALSO"
 .IR cap_copy_ext (3),
 .IR cap_from_text (3),
