--- a/doc/cap_clear.3
+++ b/doc/cap_clear.3
@@ -14,18 +14,18 @@ cap_clear, cap_get_flag, cap_set_flag \- capability data object manipulation
 .SH USAGE
 .B cc ... -lcap
 .SH DESCRIPTION
-.B cap_clear
+.BR cap_clear ()
 initializes the capability state in working storage identified by
 .I cap_p
 in such a way that all capability flags are cleared.
 .PP
-.B cap_clear_flag
+.BR cap_clear_flag ()
 resets, to
 .BR CAP_CLEAR ,
 all of the capabilities of the specific capability flag,
 .IR flag .
 .PP
-.B cap_get_flag
+.BR cap_get_flag ()
 obtains the current value of the capability flag,
 .IR flag ,
 of the capability,
@@ -35,7 +35,7 @@ from the capability state identified by
 and places it in the location pointed to by
 .IR value_p .
 .PP
-.B cap_set_flag
+.BR cap_set_flag ()
 sets the flag,
 .IR flag ,
 of each capability in the array
@@ -50,43 +50,43 @@ is used to specify the number of capabilities in the array,
 .IR caps .
 .PP
 A
-.B cap_value_t
+.I cap_value_t
 can identify any capability, such as
 .BR CAP_CHOWN .
 A
-.B cap_flag_t
+.I cap_flag_t
 can be set to
 .BR CAP_EFFECTIVE ,
 .B CAP_INHERITABLE
 or
 .BR CAP_PERMITTED .
 A
-.B cap_flag_value_t
+.I cap_flag_value_t
 can be
 .B CAP_CLEAR
 (0) or
 .B CAP_SET
 (1).
 .SH "RETURN VALUE"
-.BR cap_clear ,
-.BR cap_clear_flag ,
-.B cap_get_flag
+.BR cap_clear (),
+.BR cap_clear_flag (),
+.BR cap_get_flag ()
 and
 .B cap_set_flag
 return zero on success, and \-1 on failure.
 .PP
 On failure,
-.BR errno (3)
+.I errno
 is set to 
 .BR EINVAL ,
 indicating that one of the arguments is invalid.
 .SH "CONFORMING TO"
 These functions are as per the defunct POSIX.1e. spec.
-.B cap_clear_flag
+.BR cap_clear_flag ()
 is an extension.
 .SH "SEE ALSO"
-.IR cap_copy_ext (3),
-.IR cap_from_text (3),
-.IR cap_get_file (3),
-.IR cap_get_proc (3),
-.IR cap_init (3)
+.BR cap_copy_ext (3),
+.BR cap_from_text (3),
+.BR cap_get_file (3),
+.BR cap_get_proc (3),
+.BR cap_init (3)
