--- a/doc/cap_from_text.3
+++ b/doc/cap_from_text.3
@@ -23,7 +23,7 @@ into a textual one.  The internal representation is managed by the capability
 functions in working storage. The textual representation is a structured,
 human-readable, string suitable for display.
 .PP
-.B cap_from_text
+.BR cap_from_text ()
 allocates and initializes a capability state in working storage. It
 then sets the contents of this newly-created capability state to the
 state represented by a human-readable, nul terminated, character
@@ -32,7 +32,7 @@ string pointed to by
 It returns a pointer to the newly created capability state.  The
 caller should free any releasable memory, when the capability state in working
 storage is no longer required, by calling
-.B cap_free
+.BR cap_free ()
 with
 .I cap_t
 as an argument.  The function returns an error if it cannot parse the
@@ -43,7 +43,7 @@ or does not recognize any
 or flag character as valid.  The function also returns an error if any flag
 is both set and cleared within a single clause.
 .PP
-.B cap_to_text
+.BR cap_to_text ()
 converts the capability state in working storage identified by
 .I cap_p
 into a null terminated human-readable string.  This function allocates
@@ -60,28 +60,28 @@ The capability state in working storage, identified by
 is completely represented in the character string.  The caller should
 free any releasable memory, when the capability state in working
 storage is no longer required, by calling
-.B cap_free
+.BR cap_free ()
 with the returned string pointer as an argument.
 .PP
-.B cap_from_name
+.BR cap_from_name ()
 converts a text representation of a capability, such as "cap_chown",
-to its numerical representation (
-.B CAP_CHOWN=0
-). Writing the decoded value into
-.B *cap_p.
+to its numerical representation
+.RB ( CAP_CHOWN=0 ).
+Writing the decoded value into
+.IR *cap_p .
 If
-.B cap_p
+.I cap_p
 is
 .B NULL
 no result is written, but the return code of the function indicates
 whether or not the specified capability can be represented by the
 library.
 .PP
-.B cap_to_text
+.BR cap_to_text ()
 converts a capability index value,
-.B cap ,
+.IR cap ,
 to a libcap allocated textual string. This string should be deallocated with
-.B "cap_free" .
+.BR cap_free ().
 .SH "TEXTUAL REPRESENTATION"
 A textual representation of capability sets consists of one or more
 whitespace-separated
@@ -145,32 +145,32 @@ will raise the override-file-ownership capability in the Permitted
 capability set and lower this Inheritable capability;
 "cap_fowner+pe-i" and "cap_fowner=+pe" are equivalent.
 .SH "RETURN VALUE"
-.B "cap_from_text" ,
-.B cap_to_text
+.BR cap_from_text (),
+.BR cap_to_text ()
 and
-.B cap_to_text
+.BR cap_to_text ()
 return a non-NULL value on success, and NULL on failure.
-.B cap_from_text
+.BR cap_from_text ()
 returns 0 for success, and -1 on failure (unknown capability).
 .PP
 On failure,
-.BR errno (3)
+.I errno
 is set to 
 .BR EINVAL ,
 or 
 .BR ENOMEM .
 .SH "CONFORMING TO"
-.B cap_from_text
+.BR cap_from_text ()
 and
-.B cap_to_text
+.BR cap_to_text ()
 are specified by the withdrawn POSIX.1e draft.
-.B cap_from_name
+.BR cap_from_name ()
 and
-.B cap_to_name
+.BR cap_to_name ()
 are a Linux extension.
 .SH "SEE ALSO"
-.IR cap_clear (3),
-.IR cap_copy_ext (3),
-.IR cap_get_file (3),
-.IR cap_get_proc (3),
-.IR cap_init (3)
+.BR cap_clear (3),
+.BR cap_copy_ext (3),
+.BR cap_get_file (3),
+.BR cap_get_proc (3),
+.BR cap_init (3)
