--- a/doc/cap_get_file.3
+++ b/doc/cap_get_file.3
@@ -23,9 +23,9 @@ cap_get_file, cap_set_file, cap_get_fd, cap_set_fd \- capability manipulation on
 .br
 .B cc ... -lcap
 .SH DESCRIPTION
-.B cap_get_file
+.BR cap_get_file ()
 and
-.B cap_get_fd
+.BR cap_get_fd ()
 allocate a capability state in working storage and set it to represent the
 capability state of the pathname pointed to by
 .I path_p
@@ -36,14 +36,14 @@ state.  The effects of reading the capability state from any file
 other than a regular file is undefined.  The caller should free any
 releasable memory, when the capability state in working storage is no
 longer required, by calling
-.B cap_free
+.BR cap_free ()
 with the used
 .I cap_t
 as an argument.
 .PP
-.B cap_set_file
+.BR cap_set_file ()
 and
-.B cap_set_fd
+.BR cap_set_fd ()
 set the values for all capability flags for all capabilities for the pathname
 pointed to by
 .I path_p
@@ -67,18 +67,18 @@ the file owner or the calling process must have the effective flag of the
 capability set.  The effects of writing the capability state to any file
 type other than a regular file are undefined.
 .SH "RETURN VALUE"
-.B cap_get_file
+.BR cap_get_file ()
 and
-.B cap_get_fd
+.BR cap_get_fd ()
 return a non-NULL value on success, and NULL on failure.
 .PP
-.B cap_set_file
+.BR cap_set_file ()
 and
-.B cap_set_fd
+.BR cap_set_fd ()
 return zero on success, and \-1 on failure.
 .PP
 On failure,
-.BR errno (3)
+.I errno
 is set to
 .BR EACCES ,
 .BR EBADFD ,
@@ -92,8 +92,8 @@ or
 .SH "CONFORMING TO"
 These functions are specified by POSIX.1e.
 .SH "SEE ALSO"
-.IR cap_clear (3),
-.IR cap_copy_ext (3),
-.IR cap_from_text (3),
-.IR cap_get_proc (3),
-.IR cap_init (3)
+.BR cap_clear (3),
+.BR cap_copy_ext (3),
+.BR cap_from_text (3),
+.BR cap_get_proc (3),
+.BR cap_init (3)
