--- a/doc/cap_init.3
+++ b/doc/cap_init.3
@@ -45,10 +45,10 @@ argument may identify either a
 entity, or a
 .I char *
 entity allocated by the
-.B cap_to_text
+.BR cap_to_text ()
 function.
 .PP
-.B cap_dup
+.BR cap_dup ()
 returns a duplicate capability state in working storage given by the
 source object
 .IR cap_p , 
@@ -56,16 +56,16 @@ allocating any memory necessary, and returning a
 pointer to the newly created capability state.  Once duplicated, no
 operation on either capability state affects the other in any way.
 .SH "RETURN VALUE"
-.B cap_init
+.BR cap_init ()
 and
-.B cap_dup
+.BR cap_dup ()
 return a non-NULL value on success, and NULL on failure.
 .PP
-.B cap_free
+.BR cap_free ()
 returns zero on success, and \-1 on failure.
 .PP
 On failure,
-.BR errno (3)
+.I errno
 is set to
 .BR EINVAL ,
 or
@@ -73,8 +73,8 @@ or
 .SH "CONFORMING TO"
 These functions are specified by POSIX.1e.
 .SH "SEE ALSO"
-.IR cap_clear (3),
-.IR cap_copy_ext (3),
-.IR cap_from_text (3),
-.IR cap_get_file (3),
-.IR cap_get_proc (3)
+.BR cap_clear (3),
+.BR cap_copy_ext (3),
+.BR cap_from_text (3),
+.BR cap_get_file (3),
+.BR cap_get_proc (3)
