--- a/doc/cap_clear.3
+++ b/doc/cap_clear.3
@@ -89,4 +89,5 @@ is an extension.
 .BR cap_from_text (3),
 .BR cap_get_file (3),
 .BR cap_get_proc (3),
-.BR cap_init (3)
+.BR cap_init (3),
+.BR capabilities (7)
