--- a/doc/cap_copy_ext.3
+++ b/doc/cap_copy_ext.3
@@ -99,4 +99,5 @@ These functions are specified by POSIX.1e.
 .BR cap_from_text (3),
 .BR cap_get_file (3),
 .BR cap_get_proc (3),
-.BR cap_init (3)
+.BR cap_init (3),
+.BR capabilities (7)
