--- a/doc/cap_from_text.3
+++ b/doc/cap_from_text.3
@@ -173,4 +173,5 @@ are a Linux extension.
 .BR cap_copy_ext (3),
 .BR cap_get_file (3),
 .BR cap_get_proc (3),
-.BR cap_init (3)
+.BR cap_init (3),
+.BR capabilities (7)
