--- a/doc/cap_get_file.3
+++ b/doc/cap_get_file.3
@@ -96,4 +96,5 @@ These functions are specified by POSIX.1e.
 .BR cap_copy_ext (3),
 .BR cap_from_text (3),
 .BR cap_get_proc (3),
-.BR cap_init (3)
+.BR cap_init (3),
+.BR capabilities (7)
