--- a/doc/cap_get_proc.3
+++ b/doc/cap_get_proc.3
@@ -122,4 +122,5 @@ this default.
 .BR cap_copy_ext (3),
 .BR cap_from_text (3),
 .BR cap_get_file (3),
-.BR cap_init (3)
+.BR cap_init (3),
+.BR capabilities (7)
