More consistent link lines.
Signed-off-by: Andrew G. Morgan <morgan@kernel.org>

--- a/doc/cap_clear.3
+++ b/doc/cap_clear.3
@@ -11,8 +11,8 @@ cap_clear, cap_get_flag, cap_set_flag \- capability data object manipulation
 .BI "int cap_get_flag(cap_t " cap_p ", cap_value_t " cap ", cap_flag_t " flag ", cap_flag_value_t *" value_p ");"
 .sp
 .BI "int cap_set_flag(cap_t " cap_p ", cap_flag_t " flag ", int " ncap ", const cap_value_t *" caps ", cap_flag_value_t " value ");"
-.SH USAGE
-.B cc ... -lcap
+.sp
+Link with \fI-lcap\fP.
 .SH DESCRIPTION
 .BR cap_clear ()
 initializes the capability state in working storage identified by
