--- a/doc/cap_init.3
+++ b/doc/cap_init.3
@@ -13,9 +13,8 @@ cap_init, cap_free, cap_dup \- capability data object storage management
 .BI "int cap_free(void *" obj_d );
 .sp
 .BI "cap_t cap_dup(cap_t " cap_p );
-.SH USAGE
-.br
-.B cc ... -lcap
+.sp
+Link with \fI-lcap\fP.
 .SH DESCRIPTION
 The capabilities associated with a file or process are never edited
 directly.  Instead, working storage is allocated to contain a
