--- a/doc/cap_copy_ext.3
+++ b/doc/cap_copy_ext.3
@@ -12,9 +12,8 @@ cap_copy_ext, cap_size, cap_copy_int \- capability state external representation
 .BI "ssize_t cap_copy_ext(void *" ext_p ", cap_t " cap_p ", ssize_t " size );
 .sp
 .BI "cap_t cap_copy_int(const void *" ext_p );
-.SH USAGE
-.br
-.B cc ... -lcap
+.sp
+Link with \fI-lcap\fP.
 .SH DESCRIPTION
 These functions translate a capability state from an internal representation
 into an external one.  The external representation is an exportable, contiguous,
