--- a/doc/cap_get_file.3
+++ b/doc/cap_get_file.3
@@ -19,9 +19,8 @@ cap_get_file, cap_set_file, cap_get_fd, cap_set_fd \- capability manipulation on
 .BI "cap_t cap_get_fd(int " fd );
 .sp
 .BI "int cap_set_fd(int " fd ", cap_t " caps );
-.SH USAGE
-.br
-.B cc ... -lcap
+.sp
+Link with \fI-lcap\fP.
 .SH DESCRIPTION
 .BR cap_get_file ()
 and
