--- a/doc/cap_copy_ext.3
+++ b/doc/cap_copy_ext.3
@@ -92,7 +92,7 @@ is set to
 or
 .BR ERANGE .
 .SH "CONFORMING TO"
-These functions are specified by POSIX.1e.
+These functions are specified in the withdrawn POSIX.1e draft specification.
 .SH "SEE ALSO"
 .BR cap_clear (3),
 .BR cap_from_text (3),
