--- a/doc/cap_from_text.3
+++ b/doc/cap_from_text.3
@@ -162,7 +162,7 @@ or
 .BR cap_from_text ()
 and
 .BR cap_to_text ()
-are specified by the withdrawn POSIX.1e draft.
+are specified by the withdrawn POSIX.1e draft specification.
 .BR cap_from_name ()
 and
 .BR cap_to_name ()
