--- a/doc/cap_get_file.3
+++ b/doc/cap_get_file.3
@@ -89,7 +89,7 @@ is set to
 or
 .BR EROFS .
 .SH "CONFORMING TO"
-These functions are specified by POSIX.1e.
+These functions are specified by withdrawn POSIX.1e draft specification.
 .SH "SEE ALSO"
 .BR cap_clear (3),
 .BR cap_copy_ext (3),
