--- a/doc/cap_get_proc.3
+++ b/doc/cap_get_proc.3
@@ -99,8 +99,7 @@ or
 .BR cap_set_proc ()
 and
 .BR cap_get_proc ()
-are functions specified in the draft for POSIX.1e.
-
+are functions specified in the withdrawn POSIX.1e draft specification.
 .SH "NOTES"
 The function
 .BR capsetp ()
@@ -114,7 +113,6 @@ available to them are processes started as a kernel-thread.
 .BR init (8),
 kflushd and kswapd). You will need to recompile the kernel to modify
 this default.
-
 .SH "SEE ALSO"
 .BR cap_clear (3),
 .BR cap_copy_ext (3),
