--- a/doc/cap_copy_ext.3
+++ b/doc/cap_copy_ext.3
@@ -3,7 +3,8 @@
 .\"
 .TH CAP_COPY_EXT 3 "26th May 1997" "" "Linux Programmer's Manual"
 .SH NAME
-cap_copy_ext, cap_size, cap_copy_int \- capability state external representation translation
+cap_copy_ext, cap_size, cap_copy_int \- capability state
+external representation translation
 .SH SYNOPSIS
 .B #include <sys/capability.h>
 .sp
@@ -16,7 +17,8 @@ cap_copy_ext, cap_size, cap_copy_int \- capability state external representation
 Link with \fI-lcap\fP.
 .SH DESCRIPTION
 These functions translate a capability state from an internal representation
-into an external one.  The external representation is an exportable, contiguous,
+into an external one.
+The external representation is an exportable, contiguous,
 persistent representation of a capability state in user-managed space.  The
 internal representation is managed by the capability functions in working
 storage.
@@ -26,7 +28,7 @@ returns the total length (in bytes) that the capability state in working
 storage identified by
 .I cap_p
 would require when converted by
-.BR cap_copy_ext .
+.BR cap_copy_ext ().
 This function is used primarily to determine the amount of buffer space that
 must be provided to the
 .BR cap_copy_ext ()
@@ -43,8 +45,10 @@ represents the maximum size, in bytes, of the resulting data record.  The
 .BR cap_copy_ext ()
 function will do any conversions necessary to convert the capability state
 from the undefined internal format to an exportable, contiguous, persistent
-data record.  It is the responsibility of the user to allocate a buffer large
-enough to hold the copied data.  The buffer length required to hold the copied
+data record.
+It is the responsibility of the user to allocate a buffer large
+enough to hold the copied data.
+The buffer length required to hold the copied
 data may be obtained by a call to the
 .BR cap_size ()
 function.
