--- a/doc/cap_clear.3
+++ b/doc/cap_clear.3
@@ -2,17 +2,22 @@
 .SH NAME
 cap_clear, cap_get_flag, cap_set_flag \- capability data object manipulation
 .SH SYNOPSIS
+.nf
 .B #include <sys/capability.h>
 .sp
 .BI "int cap_clear(cap_t " cap_p );
 .sp
 .BI "int cap_clear_flag(cap_t " cap_p ", cap_flag_t " flag ");"
 .sp
-.BI "int cap_get_flag(cap_t " cap_p ", cap_value_t " cap ", cap_flag_t " flag ", cap_flag_value_t *" value_p ");"
+.BI "int cap_get_flag(cap_t " cap_p ", cap_value_t " cap ,
+.BI "                 cap_flag_t " flag ", cap_flag_value_t *" value_p ");"
 .sp
-.BI "int cap_set_flag(cap_t " cap_p ", cap_flag_t " flag ", int " ncap ", const cap_value_t *" caps ", cap_flag_value_t " value ");"
+.BI "int cap_set_flag(cap_t " cap_p ", cap_flag_t " flag ", int " ncap ,
+.BI "                 const cap_value_t *" caps \
+", cap_flag_value_t " value ");"
 .sp
 Link with \fI-lcap\fP.
+.fi
 .SH DESCRIPTION
 .BR cap_clear ()
 initializes the capability state in working storage identified by
@@ -72,7 +77,7 @@ can be
 .BR cap_clear_flag (),
 .BR cap_get_flag ()
 and
-.B cap_set_flag
+.BR cap_set_flag ()
 return zero on success, and \-1 on failure.
 .PP
 On failure,
