--- a/doc/cap_get_file.3
+++ b/doc/cap_get_file.3
@@ -1,10 +1,10 @@
 .\"
-.\" $Id: cap_get_file.3,v 1.1.1.1 1999/04/17 22:16:31 morgan Exp $
 .\" written by Andrew Main <zefram@dcs.warwick.ac.uk>
 .\"
 .TH CAP_GET_FILE 3 "17th May 1998" "" "Linux Programmer's Manual"
 .SH NAME
-cap_get_file, cap_set_file, cap_get_fd, cap_set_fd \- capability manipulation on files
+cap_get_file, cap_set_file, cap_get_fd, cap_set_fd \- capability
+manipulation on files
 .sp
 .B "    Note: support for file capabilities is anticipated in Linux 2.6.23+"
 .SH SYNOPSIS
@@ -53,9 +53,7 @@ with the capability state identified by
 The new capability state of the file shall be completely determined by the
 contents of
 .IR cap_p .
-A
-.IR NULL
-value for
+A NULL value for
 .IR cap_p
 is used to indicate that capabilities for the file should be deleted.
 For these functions to succeed, the calling process must have the
