--- a/doc/cap_clear.3
+++ b/doc/cap_clear.3
@@ -1,4 +1,4 @@
-.TH CAP_CLEAR 3 "29th March 2008" "" "Linux Programmer's Manual"
+.TH CAP_CLEAR 3 "2008-05-11" "" "Linux Programmer's Manual"
 .SH NAME
 cap_clear, cap_get_flag, cap_set_flag \- capability data object manipulation
 .SH SYNOPSIS
@@ -19,15 +19,44 @@ cap_clear, cap_get_flag, cap_set_flag \- capability data object manipulation
 Link with \fI-lcap\fP.
 .fi
 .SH DESCRIPTION
+These functions work on a capability state held in working storage.
+A
+.I cap_t
+holds information about the capabilities in each of the three sets,
+Permitted, Inheritable, and Effective.
+Each capability in a set may be clear (disabled, 0) or set (enabled, 1).
+.PP
+These functions work with the following data types:
+.TP 18
+.I cap_value_t
+identifies a capability, such as
+.BR CAP_CHOWN .
+.TP
+.I cap_flag_t
+identifies one of the three flags associated with a capability
+(i.e., it identifies one of the three capability sets).
+Valid values for this type are
+.BR CAP_EFFECTIVE ,
+.B CAP_INHERITABLE
+or
+.BR CAP_PERMITTED .
+.TP
+.I cap_flag_value_t
+identifies the setting of a particular capability flag
+(i.e, the value of a capability in a set).
+Valid values for this type are
+.B CAP_CLEAR
+(0) or
+.B CAP_SET
+(1).
+.PP
 .BR cap_clear ()
 initializes the capability state in working storage identified by
 .I cap_p
-in such a way that all capability flags are cleared.
+so that all capability flags are cleared.
 .PP
 .BR cap_clear_flag ()
-resets, to
-.BR CAP_CLEAR ,
-all of the capabilities of the specified capability flag,
+clears all of the capabilities of the specified capability flag,
 .IR flag .
 .PP
 .BR cap_get_flag ()
@@ -53,25 +82,6 @@ The argument,
 .IR ncap ,
 is used to specify the number of capabilities in the array,
 .IR caps .
-.PP
-A
-.I cap_value_t
-can identify any capability, such as
-.BR CAP_CHOWN .
-A
-.I cap_flag_t
-can be set to
-.BR CAP_EFFECTIVE ,
-.B CAP_INHERITABLE
-or
-.BR CAP_PERMITTED .
-A
-.I cap_flag_value_t
-can be
-.B CAP_CLEAR
-(0) or
-.B CAP_SET
-(1).
 .SH "RETURN VALUE"
 .BR cap_clear (),
 .BR cap_clear_flag (),
